squash merge test

--- a/mypy.ini
+++ b/mypy.ini
@@ -6,6 +6,11 @@ warn_no_return = False
 
 # Per-module options:
 
+[mypy-app.views.handlers.*]
+disallow_untyped_defs = True
+warn_return_any = True
+no_implicit_optional = True
+
 [mypy-app.data_models.*]
 disallow_untyped_defs = True
 warn_return_any = True
@@ -17,16 +22,6 @@ warn_return_any = True
 no_implicit_optional = True
 
 [mypy-app.questionnaire.*]
-disallow_untyped_defs = True
-warn_return_any = True
-no_implicit_optional = True
-
-[mypy-app.views.handlers.submit]
-disallow_untyped_defs = True
-warn_return_any = True
-no_implicit_optional = True
-
-[mypy-app.views.handlers.view_submitted_response_context]
 disallow_untyped_defs = True
 warn_return_any = True
 no_implicit_optional = True
@@ -77,21 +72,6 @@ warn_return_any = True
 no_implicit_optional = True
 
 [mypy-app.forms.duration_form]
-disallow_untyped_defs = True
-warn_return_any = True
-no_implicit_optional = True
-
-[mypy-app.views.handlers.view_submitted_response]
-disallow_untyped_defs = True
-warn_return_any = True
-no_implicit_optional = True
-
-[mypy-app.views.handlers.pdf]
-disallow_untyped_defs = True
-warn_return_any = True
-no_implicit_optional = True
-
-[mypy-app.views.handlers.feedback]
 disallow_untyped_defs = True
 warn_return_any = True
 no_implicit_optional = True
