Remove /v1/unit_data from SDS_API_BASE_URL

--- a/.functional-tests.env
+++ b/.functional-tests.env
@@ -28,4 +28,4 @@ ADDRESS_LOOKUP_API_URL=https://whitelodge-ai-api.census-gcp.onsdigital.uk
 COOKIE_SETTINGS_URL=#
 EQ_SUBMISSION_CONFIRMATION_BACKEND=log
 VIEW_SUBMITTED_RESPONSE_EXPIRATION_IN_SECONDS=35
-SDS_API_BASE_URL=http://localhost:5003/v1/unit_data
+SDS_API_BASE_URL=http://localhost:5003
