--- a/.functional-tests.env
+++ b/.functional-tests.env
@@ -29,3 +29,4 @@ COOKIE_SETTINGS_URL=#
 EQ_SUBMISSION_CONFIRMATION_BACKEND=log
 VIEW_SUBMITTED_RESPONSE_EXPIRATION_IN_SECONDS=35
 SDS_API_BASE_URL=http://localhost:5003
+OIDC_TOKEN_BACKEND=log
