--- a/package.json
+++ b/package.json
@@ -23,37 +23,37 @@
         "wdio": "wdio run ./wdio.conf.js"
     },
     "devDependencies": {
-        "@babel/core": "^7.17.5",
-        "@babel/plugin-transform-runtime": "^7.17.0",
-        "@babel/preset-env": "^7.16.11",
-        "@babel/register": "^7.17.0",
-        "@babel/runtime": "^7.17.2",
-        "@wdio/cli": "^8.3.10",
-        "@wdio/local-runner": "^8.3.10",
-        "@wdio/mocha-framework": "^8.3.0",
-        "@wdio/spec-reporter": "^8.3.0",
-        "chai": "^4.3.6",
-        "chromedriver": "^114.0.0",
-        "eslint": "^8.10.0",
+        "@babel/core": "^7.22.9",
+        "@babel/plugin-transform-runtime": "^7.22.9",
+        "@babel/preset-env": "^7.22.9",
+        "@babel/register": "^7.22.5",
+        "@babel/runtime": "^7.22.6",
+        "@wdio/cli": "^8.14.4",
+        "@wdio/local-runner": "^8.14.3",
+        "@wdio/mocha-framework": "^8.14.0",
+        "@wdio/spec-reporter": "^8.14.0",
+        "chai": "^4.3.7",
+        "chromedriver": "^115.0.0",
+        "eslint": "^8.46.0",
         "eslint-cli": "^1.1.1",
-        "eslint-config-standard": "^14.1.1",
+        "eslint-config-standard": "^17.1.0",
         "eslint-plugin-chai-friendly": "^0.7.2",
-        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-import": "^2.28.0",
         "eslint-plugin-json": "^3.1.0",
+        "eslint-plugin-n": "^16.0.1",
         "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-promise": "^6.0.0",
-        "eslint-plugin-standard": "^4.0.1",
+        "eslint-plugin-promise": "^6.1.1",
         "json-web-key": "^0.4.0",
-        "jsrsasign": "^10.5.25",
-        "lint-staged": "^12.3.5",
+        "jsrsasign": "^10.8.6",
+        "lint-staged": "^13.2.3",
         "livereload": "^0.9.3",
         "node-forge": "^1.2.1",
         "node-jose": "^2.2.0",
-        "prettier": "^2.5.1",
-        "typescript": "^4.7.4",
-        "uuid": "^8.3.2",
+        "prettier": "^3.0.1",
+        "typescript": "^5.1.6",
+        "uuid": "^9.0.0",
         "wdio-chromedriver-service": "^8.1.1",
-        "webdriverio": "8.3.10"
+        "webdriverio": "8.14.3"
     },
     "prettier": {}
 }
