--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
         "prettier": "^3.0.1",
         "typescript": "^5.1.6",
         "uuid": "^9.0.0",
-        "webdriverio": "8.14.3"
+        "webdriverio": "^8.14.3"
     },
     "prettier": {}
 }
