--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -133,7 +133,7 @@ jobs:
     runs-on: ubuntu-22.04
     env:
       EQ_RUN_FUNCTIONAL_TESTS_HEADLESS: True
-      MAX_INSTANCES: 1
+      EQ_MAX_INSTANCES: 1
     steps:
       - uses: actions/checkout@v3
       - name: Update to latest stable Chrome
