--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -136,7 +136,7 @@ jobs:
     runs-on: ubuntu-22.04
     env:
       EQ_RUN_FUNCTIONAL_TESTS_HEADLESS: True
-      EQ_FUNCTIONAL_TEST_MAX_INSTANCES: 2
+      EQ_FUNCTIONAL_TEST_MAX_INSTANCES: True
     steps:
       - uses: actions/checkout@v3
       - name: Update to latest stable Chrome
