--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -138,6 +138,7 @@ jobs:
       EQ_RUN_FUNCTIONAL_TESTS_HEADLESS: True
       EQ_FUNCTIONAL_TEST_MAX_INSTANCES: True
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: "18.14.0"
