--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -136,6 +136,7 @@ jobs:
     runs-on: ubuntu-22.04
     env:
       EQ_RUN_FUNCTIONAL_TESTS_HEADLESS: True
+      # :TODO: Revisit & update when 2 instances can be used without adverse effects
       EQ_FUNCTIONAL_TEST_MAX_INSTANCES: 1
     steps:
       - uses: actions/checkout@v3
