--- a/docker-compose-dev-mac.yml
+++ b/docker-compose-dev-mac.yml
@@ -3,11 +3,15 @@ version: "3"
 services:
     datastore:
         image: knarz/datastore-emulator
+        networks:
+            - eq-env
         ports:
             - "8432:8432"
 
     redis:
         image: redis:4
+        networks:
+            - eq-env
         ports:
             - "6379:6379"
 
@@ -16,6 +20,13 @@ services:
         environment:
             SURVEY_RUNNER_URL: http://localhost:5000
             SURVEY_RUNNER_SCHEMA_URL: http://docker.for.mac.host.internal:5000
+            SDS_API_BASE_URL: http://sds:5003
+        networks:
+            - eq-env
         restart: always
         ports:
             - "8000:8000"
+
+networks:
+    eq-env:
+        driver: bridge
