--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     environment:
       SURVEY_RUNNER_URL: http://localhost:5000
       SURVEY_RUNNER_SCHEMA_URL: http://eq-questionnaire-runner:5000
+      SDS_API_BASE_URL: http://sds:5003
     restart: always
     depends_on:
       - eq-questionnaire-runner
