Use existing docker file

--- a/docker-compose-dev-mac.yml
+++ b/docker-compose-dev-mac.yml
@@ -27,6 +27,14 @@ services:
         ports:
             - "8000:8000"
 
+    sds:
+        image: "onsdigital/eq-runner-mock-sds:latest"
+        networks:
+            - eq-env
+        restart: always
+        ports:
+            - "5003:5003"
+
 networks:
     eq-env:
         driver: bridge
