--- a/.development.env
+++ b/.development.env
@@ -27,5 +27,5 @@ CDN_ASSETS_PATH=/design-system
 ADDRESS_LOOKUP_API_URL=https://whitelodge-ai-api.census-gcp.onsdigital.uk
 COOKIE_SETTINGS_URL=#
 EQ_SUBMISSION_CONFIRMATION_BACKEND=log
-SDS_API_BASE_URL=http://localhost:5003
+SDS_API_BASE_URL=http://sds:5003
 OIDC_TOKEN_BACKEND=local
