--- a/docker-compose-dev-mac.yml
+++ b/docker-compose-dev-mac.yml
@@ -20,7 +20,7 @@ services:
         environment:
             SURVEY_RUNNER_URL: http://localhost:5000
             SURVEY_RUNNER_SCHEMA_URL: http://docker.for.mac.host.internal:5000
-            SDS_API_BASE_URL: http://sds:5003
+            SDS_API_BASE_URL: http://docker.for.mac.host.internal:5003
         networks:
             - eq-env
         restart: always
