--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -50,12 +50,11 @@ jobs:
     needs: [python-dependencies, node-dependencies]
     strategy:
       matrix:
-        suite: [ timeout_modal_expired, timeout_modal_extended, timeout_modal_extended_new_window, features, general, components ]
+        suite: [ flaky ]
     runs-on: ubuntu-22.04
     env:
       EQ_RUN_FUNCTIONAL_TESTS_HEADLESS: True
-      # :TODO: Revisit & update when 2 instances can be used without adverse effects
-      EQ_FUNCTIONAL_TEST_MAX_INSTANCES: 1
+      EQ_FUNCTIONAL_TEST_MAX_INSTANCES: 2
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -88,34 +87,3 @@ jobs:
         run: ./scripts/run_tests_functional.sh ${{ matrix.suite }}
       - name: Docker compose shutdown
         run: RUNNER_ENV_FILE=.functional-tests.env docker-compose kill
-  docker-push:
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set Tag and SHA
-        run: |
-          CLEAN_TAG=$(echo "${{ github.event.pull_request.head.ref  }}"  | tr / -)
-          echo "TAG=$CLEAN_TAG" >> $GITHUB_ENV
-          echo "SHA=${{ github.event.pull_request.head.sha }}" >> $GITHUB_ENV
-      - name: Write app version
-        run: |
-          echo "Writing SHA $SHA to .application_version"
-          printf $SHA > .application-version
-      - name: Build
-        run: >
-          docker build -t onsdigital/eq-questionnaire-runner:$TAG
-          -t ${{ secrets.GAR_LOCATION }}/${{ secrets.GAR_PROJECT_ID }}/docker-images/eq-questionnaire-runner:$TAG .
-      - name: Push to Docker Hub
-        run: |
-          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          echo "Pushing to DockerHub with tag $TAG"
-          docker push onsdigital/eq-questionnaire-runner:$TAG
-
-      - name: Push to GAR
-        env:
-          GAR_SERVICE_KEY: ${{ secrets.GAR_SERVICE_KEY }}
-        run: |
-          echo $GAR_SERVICE_KEY | docker login -u _json_key --password-stdin https://${{ secrets.GAR_LOCATION }}
-          gcloud auth configure-docker ${{ secrets.GAR_LOCATION }}
-          echo "Pushing to GAR with tag $TAG"
-          docker push ${{ secrets.GAR_LOCATION }}/${{ secrets.GAR_PROJECT_ID }}/docker-images/eq-questionnaire-runner:$TAG
