--- a/docker-compose-dev-linux.yml
+++ b/docker-compose-dev-linux.yml
@@ -20,11 +20,20 @@ services:
         environment:
             SURVEY_RUNNER_URL: http://localhost:5000
             SURVEY_RUNNER_SCHEMA_URL: http://host.docker.internal:5000
+            SDS_API_BASE_URL: http://host.docker.internal:5003
         networks:
             - eq-env
         restart: always
         ports:
             - "8000:8000"
+
+    sds:
+        image: onsdigital/eq-runner-mock-sds:latest
+        networks:
+            - eq-env
+        restart: always
+        ports:
+            - "5003:5003"
 
 networks:
     eq-env:
