--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,47 +2,57 @@ version: '3'
 
 services:
 
-  datastore:
-    image: knarz/datastore-emulator
-    networks:
-      - eq-env
+    datastore:
+        image: knarz/datastore-emulator
+        networks:
+            - eq-env
 
-  redis:
-    image: redis:4
-    networks:
-      - eq-env
+    redis:
+        image: redis:4
+        networks:
+            - eq-env
 
-  eq-questionnaire-runner:
-    image: onsdigital/eq-questionnaire-runner:latest
-    build: ./
-    env_file:
-      - ${RUNNER_ENV_FILE}
-    environment:
-      DATASTORE_EMULATOR_HOST: datastore:8432
-      EQ_REDIS_HOST: "redis"
-    restart: always
-    depends_on:
-      - datastore
-      - redis
-    networks:
-      - eq-env
-    ports:
-      - "5000:5000"
+    eq-questionnaire-runner:
+        image: onsdigital/eq-questionnaire-runner:latest
+        build: ./
+        env_file:
+            - ${RUNNER_ENV_FILE}
+        environment:
+            DATASTORE_EMULATOR_HOST: datastore:8432
+            EQ_REDIS_HOST: "redis"
+            SDS_API_BASE_URL: http://sds:5003
+        restart: always
+        depends_on:
+            - datastore
+            - redis
+        networks:
+            - eq-env
+        ports:
+            - "5000:5000"
 
-  eq-questionnaire-launcher:
-    image: onsdigital/eq-questionnaire-launcher:latest
-    environment:
-      SURVEY_RUNNER_URL: http://localhost:5000
-      SURVEY_RUNNER_SCHEMA_URL: http://eq-questionnaire-runner:5000
-    restart: always
-    depends_on:
-      - eq-questionnaire-runner
-    networks:
-      - eq-env
-    ports:
-      - "8000:8000"
+    eq-questionnaire-launcher:
+        image: onsdigital/eq-questionnaire-launcher:latest
+        environment:
+            SURVEY_RUNNER_URL: http://localhost:5000
+            SURVEY_RUNNER_SCHEMA_URL: http://eq-questionnaire-runner:5000
+            SDS_API_BASE_URL: http://sds:5003
+        restart: always
+        depends_on:
+            - eq-questionnaire-runner
+        networks:
+            - eq-env
+        ports:
+            - "8000:8000"
+
+    sds:
+        image: onsdigital/eq-runner-mock-sds:latest
+        networks:
+            - eq-env
+        restart: always
+        ports:
+            - "5003:5003"
 
 
 networks:
-  eq-env:
-    driver: bridge
+    eq-env:
+        driver: bridge
