--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -53,8 +53,8 @@ jobs:
         suite: [ flaky ]
     runs-on: ubuntu-22.04
     env:
-      EQ_RUN_FUNCTIONAL_TESTS_HEADLESS: True
-      EQ_FUNCTIONAL_TEST_MAX_INSTANCES: 1
+      EQ_RUN_FUNCTIONAL_TESTS_HEADLESS: False
+      EQ_FUNCTIONAL_TEST_MAX_INSTANCES: 2
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
