Add install snappy step

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -26,7 +26,9 @@ jobs:
       - name: Install Pipenv
         run: pip install pipenv==2022.11.30
       - name: Install virtual environment
-        run: pipenv install --dev
+        run: |
+          sudo apt-get install libsnappy-dev
+          pipenv install --dev
   node-dependencies:
     runs-on: ubuntu-22.04
     steps:
