--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ pylint-mccabe = "*"
 pylint-quotes = "*"
 "beautifulsoup4" = "*"
 httmock = "*"
-"flake8" = "==4.0.1"
+"flake8" = "*"
 "flake8-debugger" = "*"
 "flake8-mock" = "*"
 "flake8-print" = "*"
