--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ jsonschema = "*"
 pylint = "*"
 pylint-mccabe = "*"
 pylint-quotes = "*"
+pylint-absolute-imports = "*"
 "beautifulsoup4" = "*"
 httmock = "*"
 "flake8" = "*"
