--- a/Pipfile
+++ b/Pipfile
@@ -45,7 +45,7 @@ flask = "*"
 flask-babel = "*"
 flask-login = "*"
 flask-wtf = "*"
-gevent = { version = "*", platform_python_implementation = "=='CPython'" }
+gevent = { version = "==23.7.0", platform_python_implementation = "=='CPython'" }
 google-cloud-datastore = "*"
 grpcio = "*"
 gunicorn = "*"
