--- a/mypy.ini
+++ b/mypy.ini
@@ -51,6 +51,11 @@ disallow_untyped_defs = True
 warn_return_any = True
 no_implicit_optional = True
 
+[mypy-app.forms.fields.*]
+disallow_untyped_defs = True
+warn_return_any = True
+no_implicit_optional = True
+
 [mypy-app.forms.questionnaire_form]
 disallow_untyped_defs = True
 warn_return_any = True
