Add type hints to fields module (#1214)

--- a/mypy.ini
+++ b/mypy.ini
@@ -46,7 +46,7 @@ disallow_untyped_defs = True
 warn_return_any = True
 no_implicit_optional = True
 
-[mypy-app.forms.field_handlers.*]
+[mypy-app.forms.*]
 disallow_untyped_defs = True
 warn_return_any = True
 no_implicit_optional = True
