Exclude venv and tests directory to ensure python lint runs without errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,7 @@ filterwarnings=
     ignore:.*formatargspec.*:DeprecationWarning
     ignore:.*isAlive.*:PendingDeprecationWarning
 
+[flake8]
+extend-ignore = E501,E203
+exclude = venv,tests
+max-complexity = 10
