Fix config and ignore files

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ filterwarnings=
     ignore:.*isAlive.*:PendingDeprecationWarning
 
 [flake8]
-extend-ignore = E501,E203
-exclude = venv,tests
-max-complexity = 10
+# Ignore node_modules and cloned repos when not in a virtual environment
+exclude = node_modules/*,tests/*,src/*
+max-line-length = 160
+ignore = C815,C816,W503,E203
