Updating makefile commands (#1226)
* add single schema validation and the option to run a single functional test

* Allow lint and tests to be run in one command for Python and JS

* Allow functional tests to be run headless

* allow dev folders such as venv and contents of gitignore to be ignored when calling make format and make lint

* allow a chosen suite to be run

* Exclude venv and tests directory to ensure python lint runs without errors

* add a command that runs JS lint and test headless and made commands names consistent

* Rename the commands to clarify the order of linting and testing when calling the command on JS/Python

* Add extra commands README that developers can utilise

* Remove venv from being ignored

* Refactor commands to clarify the purpose and to ensure consistency in names

* Alter commands that developers find useful

* Improve the description of  commands used for functional tests

* Fix config and ignore files

* Replace yarn commands with make commands

* Update the file to make use of the new Make commands

* Add new commands to generate pages and to generate new specs given a schema name

* Replace yarn commands with Make commands

* Refactor issues with running make commands

* Remove incorrect pipenv commands

* Clarify which suites are available to run using the test-functional-suite command

* Correct the make commands to ensure the PR tests pass correctly

* Update commands to use yarn commands directly rather than shell scripts

* Remove --suite from generate_pages command

* Temporary error to test if pullrequest.yml works as intended

* Correct deliberate error to ensure pullrequest.yml works as intended

* Delete unused file

* Remove the .json to be required when validating a single schema

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Running translation tests
         run: pipenv run python -m scripts.extract_translation_templates --test
       - name: Python linting
-        run: pipenv run ./scripts/run_lint_python.sh
+        run: make lint-python
       - name: Get yarn cache
         id: get-yarn-cache
         run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
@@ -88,7 +88,7 @@ jobs:
       - name: Functional tests spec lint
         run: ./scripts/lint_functional_test_specs.sh
       - name: Javascript linting
-        run: yarn lint
+        run: make lint-js
   test-unit:
     needs: python-dependencies
     runs-on: ubuntu-22.04
@@ -121,7 +121,7 @@ jobs:
       - name: Link env vars
         run: ln -sf .development.env .env
       - name: Running unit tests
-        run: pipenv run ./scripts/run_tests_unit.sh
+        run: make test-unit
   validate-schemas:
     runs-on: ubuntu-22.04
     steps:
@@ -129,7 +129,7 @@ jobs:
       - name: Run validator
         run: ./scripts/run_validator.sh
       - name: Running schema tests
-        run: ./scripts/validate_test_schemas.sh
+        run: make validate-test-schemas
   test-functional:
     needs: [python-dependencies, node-dependencies]
     strategy:
@@ -169,7 +169,7 @@ jobs:
       - name: Docker compose
         run: docker-compose --version && RUNNER_ENV_FILE=.functional-tests.env docker-compose up --build -d
       - name: Functional tests
-        run: ./scripts/run_tests_functional.sh ${{ matrix.suite }}
+        run: make test-functional-suite SUITE=${{ matrix.suite }}
       - name: Docker compose shutdown
         run: RUNNER_ENV_FILE=.functional-tests.env docker-compose kill
   docker-push:
