--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,8 @@ filterwarnings=
     ignore:.*formatargspec.*:DeprecationWarning
     ignore:.*isAlive.*:PendingDeprecationWarning
 
+[flake8]
+# Ignore node_modules and cloned repos when not in a virtual environment
+exclude = node_modules/*,tests/*,src/*
+max-line-length = 160
+ignore = C815,C816,W503,E203
