--- a/.eslintrc
+++ b/.eslintrc
@@ -22,15 +22,13 @@
     }
   },
   "plugins": [
-    "json",
-    "chai-friendly"
+    "json"
   ],
   "rules": {
     "no-loss-of-precision": 0,
     "no-nonoctal-decimal-escape": 0,
     "no-unsafe-optional-chaining": 0,
     "no-useless-backreference": 0,
-    "chai-friendly/no-unused-expressions": 2,
     "consistent-return": 1,
     "indent": [
       2,
