--- a/.development.env
+++ b/.development.env
@@ -28,4 +28,5 @@ ADDRESS_LOOKUP_API_URL=https://whitelodge-ai-api.census-gcp.onsdigital.uk
 COOKIE_SETTINGS_URL=#
 EQ_SUBMISSION_CONFIRMATION_BACKEND=log
 SDS_API_BASE_URL=http://localhost:5003
+CIR_API_BASE_URL=http://localhost:5004
 OIDC_TOKEN_BACKEND=local
