--- a/mypy.ini
+++ b/mypy.ini
@@ -100,3 +100,8 @@ no_implicit_optional = True
 disallow_untyped_defs = True
 warn_return_any = True
 no_implicit_optional = True
+
+[mypy-app.utilities.*]
+disallow_untyped_defs = True
+warn_return_any = True
+no_implicit_optional = True
