Pin libraries and fix tests

--- a/Pipfile
+++ b/Pipfile
@@ -24,7 +24,7 @@ moto = "*"
 freezegun = "*"
 pytest-xdist = "*"
 fakeredis = "*"
-mypy = "*"
+mypy = "==1.5.1"
 black = "*"
 pytest-flask = "*"
 pytest = "*"
@@ -61,7 +61,7 @@ humanize = "*"
 flask-talisman = "*"
 marshmallow = "*"
 python-snappy = "*"
-google-cloud-storage = "*"
+google-cloud-storage = "==2.12.0"
 jsonpointer = "*"
 redis = "*"
 flask-compress = "*"
