--- a/Pipfile
+++ b/Pipfile
@@ -61,7 +61,7 @@ humanize = "*"
 flask-talisman = "*"
 marshmallow = "*"
 python-snappy = "*"
-google-cloud-storage = "==2.12.0"
+google-cloud-storage = "*"
 jsonpointer = "*"
 redis = "*"
 flask-compress = "*"
