--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -62,10 +62,10 @@ jobs:
 #        run: docker-compose --version && RUNNER_ENV_FILE=.functional-tests.env docker-compose up --build -d
       - name: Run mutmut
         run: |
-            pipenv run mutmut run
-                --paths-to-mutate "app/${{ matrix.module }}/"
-                --runner "py.test -n auto tests/app/${{ matrix.module }}/"
-                --no-progress
+            pipenv run mutmut run \
+                --paths-to-mutate "app/${{ matrix.module }}/" \
+                --runner "py.test -n auto tests/app/${{ matrix.module }}/" \
+                --no-progress \
                 --CI
       - name: Save HTML output
         run: |
