--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -66,7 +66,7 @@ jobs:
                 --paths-to-mutate "app/${{ matrix.module }}/" \
 #                --runner "py.test -n auto tests/app/${{ matrix.module }}/" \
                 --runner "py.test -n auto --cov=app" \
-                --use-coverage
+                --use-coverage \
                 --no-progress \
                 --CI
       - name: Save HTML output
