--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -52,10 +52,10 @@ jobs:
         run: pip install pipenv==2023.8.22
       - name: Install virtual environment
         run: pipenv install --dev
-      - name: Load templates
-        run: make load-design-system-templates
-      - name: Compile translations
-        run: make translate
+#      - name: Load templates
+#        run: make load-design-system-templates
+#      - name: Compile translations
+#        run: make translate
       - name: Link env vars
         run: ln -sf .development.env .env
       - name: Docker compose for int testing
@@ -63,7 +63,7 @@ jobs:
       - name: Run mutmut
         run: |
             pipenv run mutmut run \
-                --paths-to-mutate "app/${{ matrix.module }}/" \
+                --paths-to-mutate "app/${{ matrix.mutation-module-under-test }}/" \
                 --runner "py.test -n auto" \
                 --no-progress \
                 --CI
