--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -25,7 +25,7 @@ jobs:
           pipenv install --dev
 
   test-mutmut:
-    needs: [python-dependencies]
+    needs: python-dependencies
     strategy:
       matrix:
         mutation-module-under-test: [ authentication, forms, publisher, questionnaire, routes ]
@@ -52,10 +52,10 @@ jobs:
         run: pip install pipenv==2023.8.22
       - name: Install virtual environment
         run: pipenv install --dev
-#      - name: Load templates
-#        run: make load-design-system-templates
-#      - name: Compile translations
-#        run: make translate
+      - name: Load templates
+        run: make load-design-system-templates
+      - name: Compile translations
+        run: make translate
       - name: Link env vars
         run: ln -sf .development.env .env
       - name: Docker compose for int testing
