--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -62,6 +62,7 @@ jobs:
         run: |
             pipenv run mutmut run \
                 --paths-to-mutate "app/${{ matrix.mutation-module-under-test }}/" \
+                --tests-dir "tests/app/${{ matrix.mutation-module-under-test }},tests/app/integration/${{ matrix.mutation-module-under-test }}" \
                 --runner "py.test -n auto" \
                 --no-progress \
                 --CI
