Try with optional int testing path

--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -60,9 +60,14 @@ jobs:
         run: ln -sf .development.env .env
       - name: Run mutmut
         run: |
+            # If an integration test path also exists, include it in the mutation tests
+            tests_dir=tests/app/${{ matrix.mutation-module-under-test }}
+            if [ -d tests/app/integration/${{ matrix.mutation-module-under-test }} ]; then
+                tests-dir="${tests_dir},tests/app/integration/${{ matrix.mutation-module-under-test }}
+
             pipenv run mutmut run \
                 --paths-to-mutate "app/${{ matrix.mutation-module-under-test }}/" \
-                --tests-dir "tests/app/${{ matrix.mutation-module-under-test }},tests/app/integration/${{ matrix.mutation-module-under-test }}" \
+                --tests-dir $tests_dir \
                 --runner "py.test -n auto" \
                 --no-progress \
                 --CI
