--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -62,8 +62,8 @@ jobs:
         run: |
             # If an integration test path also exists, include it in the mutation tests
             tests_dir=tests/app/${{ matrix.mutation-module-under-test }}
-            if [ -d tests/app/integration/${{ matrix.mutation-module-under-test }} ]; then
-                tests-dir="${tests_dir},tests/app/integration/${{ matrix.mutation-module-under-test }}"
+            if [ -d tests/integration/${{ matrix.mutation-module-under-test }} ]; then
+                tests-dir="${tests_dir},tests/integration/${{ matrix.mutation-module-under-test }}"
             fi
 
             pipenv run mutmut run \
