Test cosmic-ray with CI

--- a/cosmic-ray.ini
+++ b/cosmic-ray.ini
@@ -2,7 +2,10 @@
 module-path = "app/authentication/"
 timeout = 120.0
 excluded-modules = []
-test-command = "py.test -n auto tests/app/authentication/"
+test-command = "py.test -n auto app/authentication/"
 
 [cosmic-ray.distributor]
-name = "local"
+name = "http"
+
+[cosmic-ray.distributor.http]
+worker-urls = ["http://localhost:9876", "http://localhost:9877"]
