Update example local ini

--- a/cosmic-ray.ini
+++ b/cosmic-ray.ini
@@ -2,10 +2,12 @@
 module-path = "app/authentication/"
 timeout = 120.0
 excluded-modules = []
-test-command = "py.test -n auto app/authentication/"
+test-command = "py.test -n auto tests/app/authentication"
 
 [cosmic-ray.distributor]
-name = "http"
+name = "local"
 
-[cosmic-ray.distributor.http]
-worker-urls = ["http://localhost:9876", "http://localhost:9877"]
+[cosmic-ray.filters.operators-filter]
+exclude-operators = [
+    "core/RemoveDecorator",
+]
