--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     },
     "scripts": {
         "start": "make dev-compose-up && concurrently \"make run\" \"livereload . -e 'html,njk'\"",
-        "lint": "yarn generate_pages && yarn lint:tests && yarn lint:test-schemas",
+        "lint": "npm run generate_pages && npm run lint:tests && npm run lint:test-schemas",
         "lint:tests": "prettier --check \"tests/functional/**/*.js\" && eslint \"tests/functional/**/*.js\"",
         "lint:test-schemas": "prettier --check \"schemas/test/*/*.json\" && eslint \"schemas/test/**/*.json\"",
         "test_functional": "./node_modules/.bin/wdio tests/functional/wdio.conf.js",
         "generate_pages": "rm -rf ./tests/functional/generated_pages && pipenv run python -m tests.functional.generate_pages schemas/test/en/ ./tests/functional/generated_pages -r '../../base_pages'",
-        "format": "yarn format:tests && yarn format:test-schemas",
+        "format": "npm run format:tests && npm run format:test-schemas",
         "format:tests": "prettier \"tests/functional/**/*.js\" --write && eslint --fix \"tests/functional/**/*.js\"",
         "format:test-schemas": "prettier \"schemas/test/*/*.json\" --write && eslint --fix \"schemas/test/*/*.json\"",
         "wdio": "wdio run ./tests/functional/wdio.conf.js"
